--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "xlsx-spec-utils",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "TypeScript Open XML XLSX read/write utils",
   "dependencies": {
     "ts-dom-builder": "~0.1.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "~2.5.0",
-    "typescript": "~1.8.9"
+    "chai": "~3.5.0",
+    "mocha": "~3.3.0",
+    "typescript": "~2.3.0"
   },
   "scripts": {
-    "test": "mocha -u tdd"
+    "test": "mocha -u tdd --recursive"
   }
 }
