--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 ﻿{
   "compileOnSave": true,
   "compilerOptions": {
-    "jsx": "preserve",
     "lib": [ "es2017", "dom" ],
     "module": "commonjs",
     "noEmitOnError": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noImplicitThis": true,
     "removeComments": false,
     "sourceMap": false,
+    "strictNullChecks": false,
     "target": "es5"
   }
 }
