--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
   "name": "xlsx-spec-utils",
-  "version": "0.3.6",
+  "version": "0.3.7",
   "description": "TypeScript Open XML XLSX read/write utils",
   "author": "TeamworkGuy2",
   "homepage" : "https://github.com/TeamworkGuy2/xlsx-spec-utils",
   "license": "MIT",
   "dependencies": {
-    "dom-builder": "https://github.com/TeamworkGuy2/dom-builder/blob/master/bin/dom-builder-0.6.2.tgz?raw=true",
-    "xlsx-spec-models": "https://github.com/TeamworkGuy2/xlsx-spec-models/blob/master/bin/xlsx-spec-models-0.4.2.tgz?raw=true"
+    "dom-builder": "https://github.com/TeamworkGuy2/dom-builder#v0.6.3",
+    "xlsx-spec-models": "https://github.com/TeamworkGuy2/xlsx-spec-models#v0.4.3"
   },
   "devDependencies": {
-    "@types/chai": "~4.1.0",
-    "@types/mocha": "~5.0.0",
-    "@types/node": "~9.6.1",
-    "chai": "~4.1.0",
-    "mocha": "~5.0.0",
-    "typescript": "~2.8.0"
+    "@types/chai": "~4.1.6",
+    "@types/mocha": "~5.2.5",
+    "@types/node": "~10.11.7",
+    "chai": "~4.2.0",
+    "mocha": "~5.2.0",
+    "typescript": "~3.1.3"
   },
   "scripts": {
-    "build-package": "node ../package-tarball/index.js",
     "test": "mocha -u tdd --recursive",
     "tsc": "tsc"
   }
