--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xlsx-spec-utils",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "description": "TypeScript Open XML XLSX read/write utils",
   "author": "TeamworkGuy2",
   "homepage" : "https://github.com/TeamworkGuy2/xlsx-spec-utils",
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@twg2/dom-builder": "~0.11.0",
-    "xlsx-spec-models": "~0.8.2"
+    "xlsx-spec-models": "~0.8.3"
   },
   "devDependencies": {
     "@types/chai": "~4.2.4",
@@ -23,6 +23,6 @@
   },
   "scripts": {
     "test": "node node_modules/mocha/bin/_mocha -u tdd --recursive",
-    "tsc": "node node_modules/typescript/bin/tsc"
+    "build": "node node_modules/typescript/bin/tsc"
   }
 }
